Add palette editor midpoint
